# Rust_Downloader

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  settings.example.json  Полный_нормальный_плейлист(1).csv
src/: cli.rs  config.rs  csv_import.rs  errors.rs  main.rs  settings.rs
src/api/: config.rs  integration.rs  mod.rs
src/downloader/: api_wrapper.rs  async_manager.rs  audio.rs  converter.rs  covers.rs  itunes.rs  metadata.rs  mod.rs  soundcloud.rs  spotify.rs  youtube.rs  yt_dlp.rs
src/lyrics/: lyrics.rs  mod.rs
src/ui/: iced.rs  mod.rs
src/utils/: fs.rs  logger.rs  mod.rs  net.rs
