[package]
name = "spotify-downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI + async
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
dirs = "6.0"   # for locating config/music dirs
toml = "0.9"

# Media handling
id3 = "1.10"          # ID3 tags for mp3
lofty = "0.22"        # Cross-format audio metadata library
mp4ameta = "0.4"      # MP4/M4A metadata handling
image = "0.25"        # Cover art resize/convert
symphonia = { version = "0.5", features = ["all"] }       # Pure Rust audio library for metadata reading
url = "2.5"           # URL parsing
urlencoding = "2.1"   # URL encoding
md5 = "0.7"           # File hashing
uuid = { version = "1.0", features = ["v4"] }  # UUID generation
futures-util = "0.3"  # Async utilities
regex = "1.10"        # Regular expressions
csv = "1.3"           # CSV parsing

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# GUI - Iced for modern UI
iced = { version = "0.12", features = ["tokio", "image", "svg"] }
# iced_aw = { version = "0.6", features = ["icons"] }  # Version yanked
rfd = "0.12"  # Native file dialogs

[[example]]
name = "test_cover_art"
path = "examples/test_cover_art.rs"